<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">

        <item android:title="@string/drawer_general">

            <menu>

                <item
                    android:id="@+id/drawer_back"
                    android:checkable="false"
                    android:checked="false"
                    android:icon="@drawable/back_icon"
                    android:title="@string/drawer_back"
                    />

            </menu>

        </item>

        <item android:title="@string/drawer_profile">

            <menu>

                <item
                    android:id="@+id/drawer_picture"
                    android:checkable="false"
                    android:checked="false"
                    android:icon="@drawable/picture_icon"
                    android:title="@string/drawer_change_picture"
                    />

                <item
                    android:id="@+id/drawer_logout"
                    android:checkable="false"
                    android:checked="false"
                    android:icon="@drawable/logout_icon"
                    android:title="@string/drawer_logout"
                    />
            </menu>
        </item>

    </group>

</menu>