<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_dialog"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/reset_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_btn_reset_password"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textColor="@color/bg_login"
        android:textStyle="bold"

        android:layout_marginTop="5dp"
        />

    <EditText
        android:id="@+id/reset_EDT_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/bg_login"

        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@id/reset_LBL_title"/>

    <Button
        android:id="@+id/reset_BTN_reset"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/bg_login"
        android:text="@string/reset_reset"
        android:textColor="@color/white"
        android:textStyle="bold"

        android:layout_marginBottom="15dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_below="@+id/reset_EDT_email"/>

</RelativeLayout>