<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.SearchRecipesFragment">

    <ImageView
        android:id="@+id/search_IMG_recipe"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:id="@+id/search_TXT_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_IMG_recipe"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:maxLines="2"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/search_TXT_missing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_TXT_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/holo_red_dark"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/search_TXT_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_TXT_missing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@android:color/holo_green_dark"
        android:gravity="center"
        />

    <Button
        android:id="@+id/search_TXT_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="?actionBarSize"

        android:text="@string/recipes_search"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/search_BTN_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="150dp"
        android:text="@string/recipes_back" />

    <Button
        android:id="@+id/search_BTN_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:text="@string/recipes_add" />

    <Button
        android:id="@+id/search_BTN_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="150dp"
        android:text="@string/recipes_next"
        tools:ignore="RelativeOverlap" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/search_ANIM_animation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:lottie_rawRes="@raw/loading_animation"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />


</RelativeLayout>